NO_JIRA updating to latest versions